  * reencode(paramstr(0),'system')
  * remove some svn entries
  * replace unit osxbase64 by fpc unit base64
  * Release now compiled with activated Checks for IO, Range, Overflow and Stack
  * unit oscrypt with {$RANGECHECKS OFF}
  * osparserhelper: fix in geouterfunction
  * osdefinedfunction: isvisiblelocalvar: serach optimization
  * osfunc: checkfileexists: use widechsr/utf16 for filenames

-- Detlef Oertel <d.oertel@uib.de>  Wed, 23 01 2019:15:00:00 +0200


opsi-winst/opsi-script (4.12.0.36) stable; urgency=low

  * osdefinedfunctions: better errormessages
  * osdefinedfunctions: complete redesign of local var
  * osdefinedfunctions: now works also with recursive calls
  * oslog: fix: cleanup old partlogs
  * osparser: fix in md5sumfromfile (Linux)

-- Detlef Oertel <d.oertel@uib.de>  Wed, 13 Feb 2019:15:00:00 +0200

opsi-winst/opsi-script (4.12.0.35) stable; urgency=low

  * osparser: producestringlist: getsublist: with whitespaces around numbers
  * osmain: Loginscripts: do not break login script loop on reboots
  * oswebservice: getMapOfLoginscripts2Run: allscripts=false:
      we want to run the login script if installed
      or last successful action was uninstall

-- Detlef Oertel <d.oertel@uib.de>  Tue, 15 Jan 2019:15:00:00 +0200

opsi-winst/opsi-script (4.12.0.34) stable; urgency=low

  * osparser: producestringlist: getsublist: with string expression instead of numbers
  * osparser: producestringlist: createstringlist: fix: empty strings as argument allowed

-- Detlef Oertel <d.oertel@uib.de>  Thu, 10 Jan 2019:15:00:00 +0200

opsi-winst/opsi-script (4.12.0.33) stable; urgency=low

  * osconf: new config opsi-script.global.w10BitlockerSuspendOnReboot
  * osconf: new global config variable: w10BitlockerSuspendOnReboot (default= false)
  * osmain: buildPC: >=win 10 and  w10BitlockerSuspendOnReboot and (txrImmediateReboot or txrImmediateReboot)
     then suspend bitlocker for 1 reboot     fixes: #3816
  * new units oswmi, utilwmi