@@ -68,7 +68,15 @@ function opsiunquotestr2(s1,s2 : string): string;
 
 procedure stringsplitByWhiteSpace(const s: string; var Result: TStringList);
 
+procedure stringlistintersection(const inlist1 : Tstringlist; const inlist2 : Tstringlist;
+  var list1rest : Tstringlist; var listintersection  : Tstringlist);
+
+
+
+
 implementation
+
+
 
 function CutLeftBlanks(const s: string): string;
 begin
@@ -381,6 +389,34 @@ begin
   begin
     GetWord(remainder, item, remainder, WordDelimiterWhiteSpace);
     Result.add(item);
+  end;
+end;
+
+procedure stringlistintersection(const inlist1 : Tstringlist; const inlist2 : Tstringlist;
+  var list1rest : Tstringlist; var listintersection  : Tstringlist);
+var
+  i : integer;
+  str : string;
+begin
+  //str := inlist1.DelimitedText;
+  //str := inlist2.DelimitedText;
+  list1rest.Clear;
+  listintersection.Clear;
+  //str := inlist1.DelimitedText;
+  //str := inlist2.DelimitedText;
+  for i := 0 to inlist1.Count -1 do
+  begin
+    str := inlist1.Strings[i];
+    if inlist2.IndexOf(str) = -1 then
+    begin
+      // the inlist1 string is not found in inlist2 so it goes to list1rest
+      list1rest.Add(str);
+    end
+    else
+    begin
+      // the inlist1 string is found in inlist2 so it goes to listintersection
+      listintersection.Add(str);
+    end;
   end;
 end;
 
