@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <CONFIG>
   <ProjectOptions>
-    <Version Value="10"/>
+    <Version Value="11"/>
     <PathDelim Value="\"/>
     <General>
       <MainUnit Value="0"/>
@@ -22,10 +22,10 @@
       <UseVersionInfo Value="True"/>
       <MajorVersionNr Value="4"/>
       <MinorVersionNr Value="12"/>
-      <BuildNr Value="35"/>
-      <StringTable Comments="Compiled with Lazarus 1.8.4 / FPC 3.0.4" CompanyName="uib gmbh (uib.de / opsi.org)" FileDescription="opsi-script" InternalName="winst64.exe" LegalCopyright="AGPL v3" LegalTrademarks="opsi / opsi.org / open pc server integration" OriginalFilename="winst64.exe" ProductName="opsi-script" ProductVersion="4.1.0.0"/>
+      <RevisionNr Value="1"/>
+      <StringTable Comments="Compiled with Lazarus 2.0.0 / FPC 3.0.4" CompanyName="uib gmbh (uib.de / opsi.org)" FileDescription="opsi-script" InternalName="winst64.exe" LegalCopyright="AGPL v3" LegalTrademarks="opsi / opsi.org / open pc server integration" OriginalFilename="winst64.exe" ProductName="opsi-script" ProductVersion="4.1.0.0"/>
     </VersionInfo>
-    <BuildModes Count="4">
+    <BuildModes Count="4" Active="Release">
       <Item1 Name="default" Default="True"/>
       <Item2 Name="Debug">
         <CompilerOptions>
@@ -99,6 +99,12 @@
           </Parsing>
           <CodeGeneration>
             <SmartLinkUnit Value="True"/>
+            <Checks>
+              <IOChecks Value="True"/>
+              <RangeChecks Value="True"/>
+              <OverflowChecks Value="True"/>
+              <StackChecks Value="True"/>
+            </Checks>
             <TargetCPU Value="x86_64"/>
             <TargetOS Value="win64"/>
             <Optimizations>
@@ -177,16 +183,21 @@
     </BuildModes>
     <PublishOptions>
       <Version Value="2"/>
-      <IgnoreBinaries Value="False"/>
-      <IncludeFileFilter Value="*.(pas|pp|inc|lfm|lpr|lrs|lpi|lpk|sh|xml)"/>
-      <ExcludeFileFilter Value="*.(bak|ppu|ppw|o|so);*~;backup"/>
     </PublishOptions>
     <RunParams>
       <local>
-        <FormatVersion Value="1"/>
         <CommandLineParams Value="/opsiservice &quot;https://bonifax:4447&quot; /clientid pcbon4.uib.local /username pcbon4.uib.local /password 379187d370b6aa9a7babe0b6c5f0bc64"/>
         <LaunchingApplication PathPlusParams="\usr\X11R6\bin\xterm -T 'Lazarus Run Output' -e $(LazarusDir)\tools\runwait.sh $(TargetCmdLine)"/>
       </local>
+      <FormatVersion Value="2"/>
+      <Modes Count="1">
+        <Mode0 Name="default">
+          <local>
+            <CommandLineParams Value="/opsiservice &quot;https://bonifax:4447&quot; /clientid pcbon4.uib.local /username pcbon4.uib.local /password 379187d370b6aa9a7babe0b6c5f0bc64"/>
+            <LaunchingApplication PathPlusParams="\usr\X11R6\bin\xterm -T 'Lazarus Run Output' -e $(LazarusDir)\tools\runwait.sh $(TargetCmdLine)"/>
+          </local>
+        </Mode0>
+      </Modes>
     </RunParams>
     <RequiredPackages Count="2">
       <Item1>
@@ -341,7 +352,7 @@
         <ComponentName Value="DialogServicePassword"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="14"/>
+        <EditorIndex Value="13"/>
         <TopLine Value="45"/>
         <CursorPos X="38" Y="65"/>
         <UsageCount Value="200"/>
@@ -388,7 +399,7 @@
         <ComponentName Value="CentralForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="7"/>
+        <EditorIndex Value="6"/>
         <TopLine Value="841"/>
         <CursorPos X="39" Y="860"/>
         <UsageCount Value="200"/>
@@ -459,8 +470,10 @@
       </Unit27>
       <Unit28>
         <Filename Value="changelog.txt"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="1"/>
-        <CursorPos X="47" Y="13"/>
+        <TopLine Value="58"/>
+        <CursorPos X="64" Y="72"/>
         <UsageCount Value="100"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="None"/>
@@ -539,7 +552,7 @@
       </Unit37>
       <Unit38>
         <Filename Value="osfunclin.pas"/>
-        <EditorIndex Value="11"/>
+        <EditorIndex Value="10"/>
         <TopLine Value="203"/>
         <CursorPos X="10" Y="228"/>
         <UsageCount Value="204"/>
@@ -565,13 +578,13 @@
       <Unit41>
         <Filename Value="osfunc.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="8"/>
-        <TopLine Value="8726"/>
-        <CursorPos X="32" Y="8736"/>
+        <TopLine Value="2655"/>
+        <CursorPos X="26" Y="2655"/>
         <ExtraEditorCount Value="2"/>
         <ExtraEditor1>
-          <TopLine Value="2655"/>
-          <CursorPos X="26" Y="2655"/>
+          <EditorIndex Value="8"/>
+          <TopLine Value="8726"/>
+          <CursorPos X="41" Y="8747"/>
         </ExtraEditor1>
         <ExtraEditor2>
           <EditorIndex Value="-1"/>
@@ -586,7 +599,7 @@
       <Unit42>
         <Filename Value="osfuncwin2.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="3"/>
+        <EditorIndex Value="2"/>
         <TopLine Value="18"/>
         <CursorPos X="30" Y="26"/>
         <UsageCount Value="209"/>
@@ -603,20 +616,13 @@
       <Unit44>
         <Filename Value="osparser.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="2"/>
-        <TopLine Value="19557"/>
-        <CursorPos X="31" Y="19592"/>
-        <ExtraEditorCount Value="1"/>
-        <ExtraEditor1>
-          <IsVisibleTab Value="True"/>
         <EditorIndex Value="14"/>
-        <TopLine Value="16094"/>
-        <CursorPos X="36" Y="16108"/>
+        <TopLine Value="17147"/>
+        <CursorPos X="24" Y="17166"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
-          <IsVisibleTab Value="True"/>
           <EditorIndex Value="-1"/>
-          <WindowIndex Value="1"/>
+          <WindowIndex Value="-1"/>
           <TopLine Value="7725"/>
           <CursorPos X="48" Y="7727"/>
         </ExtraEditor1>
@@ -666,7 +672,7 @@
       <Unit51>
         <Filename Value="osconf.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="12"/>
+        <EditorIndex Value="11"/>
         <TopLine Value="73"/>
         <CursorPos X="23" Y="86"/>
         <UsageCount Value="205"/>
@@ -683,9 +689,9 @@
       <Unit53>
         <Filename Value="osmain.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="8"/>
-        <TopLine Value="1524"/>
-        <CursorPos X="7" Y="1539"/>
+        <EditorIndex Value="7"/>
+        <TopLine Value="1848"/>
+        <CursorPos Y="1867"/>
         <UsageCount Value="204"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
@@ -789,7 +795,7 @@
       <Unit67>
         <Filename Value="..\common\osencoding.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="4"/>
+        <EditorIndex Value="3"/>
         <TopLine Value="8"/>
         <CursorPos X="14" Y="16"/>
         <UsageCount Value="100"/>
@@ -819,7 +825,7 @@
       <Unit70>
         <Filename Value="..\common\oslog.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="13"/>
+        <EditorIndex Value="12"/>
         <TopLine Value="1347"/>
         <CursorPos X="9" Y="241"/>
         <UsageCount Value="100"/>
@@ -878,7 +884,7 @@
       <Unit76>
         <Filename Value="osregistry.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="10"/>
+        <EditorIndex Value="9"/>
         <TopLine Value="96"/>
         <CursorPos X="22" Y="103"/>
         <UsageCount Value="100"/>
@@ -935,7 +941,7 @@
       </Unit81>
       <Unit82>
         <Filename Value="..\external_libraries\indy\Lib\Protocols\IdHTTP.pas"/>
-        <EditorIndex Value="5"/>
+        <EditorIndex Value="4"/>
         <TopLine Value="1796"/>
         <CursorPos X="12" Y="1808"/>
         <UsageCount Value="15"/>
@@ -951,126 +957,126 @@
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit83>
     </Units>
-    <JumpHistory Count="29" HistoryIndex="28">
+    <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="osparser.pas"/>
-        <Caret Line="17765" Column="23" TopLine="17744"/>
+        <Caret Line="1943" Column="25" TopLine="1926"/>
       </Position1>
       <Position2>
         <Filename Value="osparser.pas"/>
-        <Caret Line="1943" Column="25" TopLine="1926"/>
+        <Caret Line="417" Column="13" TopLine="401"/>
       </Position2>
       <Position3>
         <Filename Value="osparser.pas"/>
-        <Caret Line="417" Column="13" TopLine="401"/>
+        <Caret Line="20703" Column="107" TopLine="120"/>
       </Position3>
       <Position4>
         <Filename Value="osparser.pas"/>
-        <Caret Line="20703" Column="107" TopLine="120"/>
+        <Caret Line="418" Column="104" TopLine="402"/>
       </Position4>
       <Position5>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="418" Column="104" TopLine="402"/>
+        <Filename Value="osfunc.pas"/>
+        <Caret Line="1029" TopLine="1010"/>
       </Position5>
       <Position6>
         <Filename Value="osfunc.pas"/>
-        <Caret Line="1029" TopLine="1010"/>
+        <Caret Line="344" Column="22" TopLine="330"/>
       </Position6>
       <Position7>
         <Filename Value="osfunc.pas"/>
-        <Caret Line="344" Column="22" TopLine="330"/>
+        <Caret Line="8389" Column="24" TopLine="8377"/>
       </Position7>
       <Position8>
         <Filename Value="osfunc.pas"/>
-        <Caret Line="8389" Column="24" TopLine="8377"/>
+        <Caret Line="9028" Column="16" TopLine="9011"/>
       </Position8>
       <Position9>
         <Filename Value="osfunc.pas"/>
-        <Caret Line="9028" Column="16" TopLine="9011"/>
+        <Caret Line="8694" Column="10" TopLine="8679"/>
       </Position9>
       <Position10>
         <Filename Value="osfunc.pas"/>
-        <Caret Line="8694" Column="10" TopLine="8679"/>
+        <Caret Line="8579" Column="10" TopLine="8563"/>
       </Position10>
       <Position11>
-        <Filename Value="osfunc.pas"/>
-        <Caret Line="8579" Column="10" TopLine="8563"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="20714" Column="33" TopLine="20714"/>
       </Position11>
       <Position12>
         <Filename Value="osparser.pas"/>
-        <Caret Line="20714" Column="33" TopLine="20714"/>
+        <Caret Line="1188" Column="16" TopLine="1170"/>
       </Position12>
       <Position13>
         <Filename Value="osparser.pas"/>
-        <Caret Line="1188" Column="16" TopLine="1170"/>
+        <Caret Line="232" Column="22" TopLine="218"/>
       </Position13>
       <Position14>
         <Filename Value="osparser.pas"/>
-        <Caret Line="232" Column="22" TopLine="218"/>
+        <Caret Line="115" Column="76" TopLine="85"/>
       </Position14>
       <Position15>
         <Filename Value="osparser.pas"/>
-        <Caret Line="115" Column="76" TopLine="85"/>
+        <Caret Line="12667" Column="40" TopLine="12657"/>
       </Position15>
       <Position16>
         <Filename Value="osparser.pas"/>
-        <Caret Line="12667" Column="40" TopLine="12657"/>
+        <Caret Line="12664" Column="100" TopLine="12657"/>
       </Position16>
       <Position17>
         <Filename Value="osparser.pas"/>
-        <Caret Line="12664" Column="100" TopLine="12657"/>
+        <Caret Line="16242" Column="99" TopLine="16234"/>
       </Position17>
       <Position18>
         <Filename Value="osparser.pas"/>
-        <Caret Line="16242" Column="99" TopLine="16234"/>
+        <Caret Line="12663" Column="98" TopLine="12656"/>
       </Position18>
       <Position19>
         <Filename Value="osparser.pas"/>
-        <Caret Line="12663" Column="98" TopLine="12656"/>
+        <Caret Line="16106" Column="60" TopLine="16096"/>
       </Position19>
       <Position20>
         <Filename Value="osparser.pas"/>
-        <Caret Line="16106" Column="60" TopLine="16096"/>
+        <Caret Line="12985" Column="82" TopLine="12969"/>
       </Position20>
       <Position21>
         <Filename Value="osparser.pas"/>
-        <Caret Line="12985" Column="82" TopLine="12969"/>
+        <Caret Line="14062" Column="70" TopLine="14054"/>
       </Position21>
       <Position22>
         <Filename Value="osparser.pas"/>
-        <Caret Line="14062" Column="70" TopLine="14054"/>
+        <Caret Line="13383" Column="86" TopLine="13371"/>
       </Position22>
       <Position23>
         <Filename Value="osparser.pas"/>
-        <Caret Line="13383" Column="86" TopLine="13371"/>
+        <Caret Line="13696" Column="45" TopLine="13683"/>
       </Position23>
       <Position24>
         <Filename Value="osparser.pas"/>
-        <Caret Line="13696" Column="45" TopLine="13683"/>
+        <Caret Line="14633" Column="65" TopLine="14622"/>
       </Position24>
       <Position25>
         <Filename Value="osparser.pas"/>
-        <Caret Line="14633" Column="65" TopLine="14622"/>
+        <Caret Line="14043" Column="105" TopLine="14037"/>
       </Position25>
       <Position26>
         <Filename Value="osparser.pas"/>
-        <Caret Line="16424" Column="53" TopLine="16800"/>
+        <Caret Line="16094" Column="104" TopLine="16088"/>
       </Position26>
       <Position27>
         <Filename Value="osparser.pas"/>
-        <Caret Line="14043" Column="105" TopLine="14037"/>
+        <Caret Line="12664" Column="98" TopLine="12656"/>
       </Position27>
       <Position28>
         <Filename Value="osparser.pas"/>
-        <Caret Line="16094" Column="104" TopLine="16088"/>
+        <Caret Line="14049" Column="96" TopLine="14042"/>
       </Position28>
       <Position29>
         <Filename Value="osparser.pas"/>
-        <Caret Line="12664" Column="98" TopLine="12656"/>
+        <Caret Line="16108" Column="36" TopLine="16094"/>
       </Position29>
       <Position30>
         <Filename Value="osparser.pas"/>
-        <Caret Line="14049" Column="96" TopLine="14042"/>
+        <Caret Line="17129" Column="33" TopLine="17122"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
@@ -1137,7 +1143,7 @@
         <WatchScope Value="wpsLocal"/>
         <WatchKind Value="wpkWrite"/>
         <Source Value="osmain.pas"/>
-        <Line Value="1866"/>
+        <Line Value="1867"/>
       </Item2>
     </BreakPoints>
     <Watches Count="5">
